--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,9 +7,9 @@
     <title>Express Restaurants</title>
 </head>
 <body>
-    <head>
+    <header>
         <a class="brand" href="/">foodie</a>
-    </head>
+    </header>
     <main>
         //this body will show content. content from another file
         {{{body}}}
